examples/test/testpolicy11368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11368
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key27: value20
      key21: value38
      key1: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value33
          key48: value28
          key37: value23
